# uvp-media-player

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.txt  Pipfile  README.md  build-win.ps1  build.json  build.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.py  setup.cfg  setup.py  tox.ini  try.py
.github/scripts/: install-vlc-win.ps1
.github/workflows/: build.yml
app/: __init__.py  __main__.py  context.py  info.py  mainwindow.py
app/adjustments/: __init__.py  _base.py  audio.py  image.py
app/base/: __init__.py  docking.py  popup.py
app/client/: configure.py  connect.py  socks.py
app/config/: state.py
app/gui/: __init__.py  ontop.py  style.py
app/output/: frame.py  fullscreen.py  orientation.py  playback.py  size.py  sound.py  status.py
app/playlist/: files.py  model.py  player.py  view.py
app/preferences/: __init__.py  about.py
app/utils/: __init__.py  platform.py
app/vlcqt/: __init__.py  _facades.py  _signals.py
eventvr_player/: __init__.py  __main__.py  comm.py  display.py  events.py  factory.py  logs.py  player.py  util.py  viewer.py  viewpoint.py  vlc_objects.py  vlc_signals.py  window.py
hooks/: hook-vlc.py
hooks/analysis/: hook-vlc.py
hooks/runtime/: hook-vlc-runtime.py
media/: playlist.m3u
player/: __main__.py  actions.py  buttons.py  comm.py  config.py  context.py  factory.py  helpers.py  icons.py  logs.py  main.py  mainwindow.py  picture.py  screens.py  sliders.py  style.py  system.py  user.py  util.py  viewpoint.py  vlc_facades.py  vlc_objects.py  vlc_signals.py  window.py
resources/: darkstyle.qss  style.qss
scripts/: build-win.ps1  install-pillow-dependencies.sh  install-vlc-mac.sh  install-vlc-win.ps1
seevr_player/: __init__.py  __main__.py  comm.py  player.py  system.py  viewer.py
seevrplayer/: __init__.py  comm.py~HEAD  player.py  viewer.py
src/: __main__.py  comm.py  config.py  logs.py  main.py  playlist.py  util.py  viewpoint.py
src/gui/: main.py  (+13 more)
tests/: conftest.py  test_main.py  test_vlc_signals.py  test_vlcqt_facades.py
vrpclient/: __init__.py  cli.py  client.py  player.py  system.py  try.py  viewer.py
vrprojector_client/: client.py
(+157 files in other folders)
