[tool.poetry]
name = "seevr-player"
version = "0.0.0"
description = ""
authors = ["Gary Tyler <mail@garytyler.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pip = "^20.2"
PyQt5-sip = "12.8.0"
pyqt5 = "^5.14"
ffmpeg-python = "0.2.0"
python-vlc = "^3.0"
qtawesome = "0.7.2"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
pyinstaller = "^3.6"
flake8 = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-qt = "*"
pywin32-ctypes = { version = "0.2.0", markers = "sys_platform == 'win32'" }
typer = "*"
colorama = "*"
shellingham = "*"
dmgbuild = "^1.3"
macholib = "*"
imageio = "^2.9"
