[tool.poetry]
name = "seevr-player"
version = "0.0.0"
description = ""
authors = ["Gary Tyler <mail@garytyler.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyQt5-sip = "12.8.0"
pyqt5 = "^5.14"
ffmpeg-python = "0.2.0"
python-vlc = "^3.0"
qtawesome = "0.7.2"
black = "^19.10b0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pyinstaller = "^3.6"
flake8 = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-qt = "*"
typer = "*"
colorama = "*"
shellingham = "*"
pywin32-ctypes = { version = "0.2.0", markers = "sys_platform == 'win32'" }
macholib = { version = "*", markers = "sys_platform == 'win32'" }
dmgbuild = "^1.3"
pillow = "^7.2.0"
