[tool.poetry]
name = "UVP-Media-Player"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
pyqt5 = "^5.15.0"
PyQt5-sip = "12.8.0"
ffmpeg-python = "0.2.0"
python-vlc = "^3.0"
qtawesome = "0.7.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pyinstaller = "^4.2"
flake8 = "^3.8.3"
isort = "^5.7.0"
mypy = "^0.782"
pre-commit = "^2.6.0"
pytest = "^6.0.1"
pytest-qt = "^3.3.0"
typer = "*"
colorama = "*"
shellingham = "*"
pywin32-ctypes = { version = "0.2.0", markers = "sys_platform == 'win32'" }
macholib = "^1.14"
dmgbuild = { version = "^1.4.2", markers = "sys_platform == 'darwin'" }
pillow = "^10.0.1"
httpx = "^0.16.1"
pytest-cov = "^2.11.0"
pytest-xvfb = "^2.0.0"
